idf_component_register(
    SRCS
        "ec800_at_modem.cc"
        "ec800_ssl_transport.cc"
        "ec800_http.cc"
        "ec800_mqtt.cc"
        "ec800_udp.cc"
        "web_socket.cc"
        "tls_transport.cc"
        "tcp_transport.cc"
        "esp_http.cc"
        "esp_mqtt.cc"
        "esp_udp.cc"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
    REQUIRES
        "esp_driver_gpio"
        "esp_driver_uart"
        "esp-tls"
        "esp_http_client"
        "mqtt"
)
